apps/base/infra-docker-registry-ui/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-ui
spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app.kubernetes.io/name: docker-registry-ui
    app.kubernetes.io/component: docker-registry-ui
